--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 				<img src="img/stkr2.gif" alt="" id="pp">
 			</div>
 			<div class="link">
-				<a href="https://www.instagram.com/ha_ki_04"><img src="img/Me.png" alt="">nyicil Laptop </a>
+				<a href="https://saweria.co/Damesetiapp"><img src="img/Me.png" alt="">nyicil Laptop </a>
 				<a href="https://www.instagram.com/metiktod?igsh=aGRqMjZ1b242NWZ4"><img src="img/instagram.png" alt="">MY INSTAGRAM </a>
 				<a href="https://www.youtube.com/@Damesetiappraya"><img src="img/youtube.png" alt="">Youtube</a>
 				<a href="https://www.tiktok.com/@damesetiappraya?_t=8nXzEzVCcVB&_r=1"><img src="img/tiktok.png" alt="">Tiktok</a>
